--- a/Commissions.html
+++ b/Commissions.html
@@ -35,7 +35,7 @@
                         <img src="Imagenes/furAndJam1.png" class="thumbnail active" alt="Full Body 1" data-bg="#ede4da">
                         <img src="Imagenes/PennyHW.png" class="thumbnail" alt="Full Body 2" data-bg="#ede4da"> 
                         <img src="Imagenes/Koko2.png" class="thumbnail" alt="Full Body 3" data-bg="#f4ece6">
-                        <img src="Imagenes/Angy.png" class="thumbnail" alt="Full Body 4" data-bg="#f4e8f3">
+                        <img src="Imagenes/angy.png" class="thumbnail" alt="Full Body 4" data-bg="#f4e8f3">
                         <img src="Imagenes/Exph2y.png" class="thumbnail" alt="Full Body 5" data-bg="#ede4da">
                         <img src="Imagenes/Navi.png" class="thumbnail" alt="Full Body 6" data-bg="#ede4da">
                     </div>
