--- a/Terms.html
+++ b/Terms.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" type="image/png" href="Imagenes/favicon.png">
     <script src="js/app.js" defer></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
