--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Navi Cattt</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" type="image/png" href="Imagenes/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Quicksand:wght@400;500;700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
