--- a/Terms.html
+++ b/Terms.html
@@ -64,7 +64,7 @@
             <ul class="term-list allowed">
                 <li>Use the commissioned piece for personal use.</li>
                 <li>Print the artwork and claim the character as their own (but not the artwork itself).</li>
-                <li>Use the artwork to promote themselves. Credits are not necessary but appreciated.</li>
+                <li>Use the artwork to promote themselves.</li>
             </ul>
         </section>
 
